# compas

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md  STATUS.md  audit.toml  deny.toml
.githooks/: pre-commit
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
apps/compas-dj/frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
apps/compas-dj/frontend/src/: App.tsx  main.tsx  styles.css
apps/compas-dj/frontend/src/components/: ControllerMap.tsx  Deck.tsx  Library.tsx  Logo.tsx  Mixer.tsx  SettingsPanel.tsx  StatusBar.tsx  TitleBar.tsx  WaveformZone.tsx
apps/compas-dj/frontend/src/hooks/: useAutoMix.ts  useAux.ts  useDeck.ts  useInternalClock.ts  useSampler.ts
apps/compas-dj/frontend/src/lib/: ipc.ts  midiMap.ts
apps/compas-dj/frontend/src/types/: track.ts
apps/compas-dj/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/compas-dj/src-tauri/icons/: icon.icns
apps/compas-dj/src-tauri/resources/controllers/: korg-nanokontrol2.json  pioneer-ddj-400.json
apps/compas-dj/src-tauri/src/: controllers.rs  db.rs  export.rs  hid.rs  lib.rs  main.rs
crates/compas-audio/: Cargo.toml
crates/compas-audio/src/: cue.rs  engine.rs  input.rs  lib.rs  live.rs  mixer.rs  sampler.rs  waveform.rs
crates/compas-core/: Cargo.toml
crates/compas-core/src/: automix.rs  buffer.rs  capabilities.rs  control.rs  error.rs  lib.rs  mapping.rs  track.rs
crates/compas-dsp/: Cargo.toml
crates/compas-dsp/benches/: dsp.rs
crates/compas-dsp/eval/: .gitignore  README.md
crates/compas-dsp/src/: analysis.rs  fx.rs  lib.rs  live.rs  rt.rs
crates/compas-dsp/tests/: beat_real_track_eval.rs  beat_tracking_harness.rs  live_beat_tracking_harness.rs
crates/compas-script/: Cargo.toml
crates/compas-script/src/: lib.rs
crates/compas-sources/: Cargo.toml
crates/compas-sources/src/: lib.rs  local.rs  streaming.rs
crates/compas-stems/: Cargo.toml
crates/compas-stems/src/: lib.rs
docs/: ARCHITECTURE-PRODUCTS.md  COMPAS-STUDIO-PLAN.md  CONTROLLER-ARCHITECTURE.md  CONTROLLERS.md  DECK-GRAPH.md  djvibebar-review.md
docs/codex-tasks/: CODEX-A.md
docs/research/: .gitignore  README.md  beat-tracking-adoption-plan.md  live-input-beat-tracking.md  lock-free-state-handoff.md  rt-audio-audit.md  source-intake-queue.md
docs/research/summaries/: beat-this-2024.md  beat-tracking-literature.md  half-double-tempo-scoring.md  obtain-online-beat-tracking.md  rt-audio-bencina-doumler.md  sparse-intro-weighting.md
frontend/: index.html  package-lock.json  package.json
frontend/scripts/: gen-icons.mjs
frontend/src/: App.tsx  main.tsx  styles.css  theme.css
frontend/src/components/: ControllerMap.tsx  Deck.tsx  Fader.tsx  Instrument.tsx  Knob.tsx  Library.tsx  Logo.tsx  Meter.tsx  MidiMap.tsx  Mixer.tsx  NavRail.tsx  ProfilePanel.tsx  Sampler.tsx  StatusBar.tsx  TitleBar.tsx  Waveform.tsx  WaveformZone.tsx  icons.tsx
frontend/src/hooks/: useAutoMix.ts  useAux.ts  useBooth.ts  useCue.ts  useDeck.ts  useLibrary.ts  useMidi.ts  useMidiMap.ts  useSpotify.ts
frontend/src/lib/: ipc.ts  midiMap.ts  spotify.ts
scripts/: check-versions.mjs  gen-icons.mjs  install-hooks.ps1  make-test-audio.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/controllers/: akai-lpd8.json  akai-mpk-mini-mk3.json  pioneer-ddj-flx4.json
src-tauri/src/: controllers.rs  db.rs  hid.rs  lib.rs  spotify.rs
website/: CNAME  README.md  index.html  manual.html  privacy.html  styles.css
