[package]
name = "compas"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "compas — cross-platform real-time DJ application (Tauri 2 shell)."
default-run = "compas"

# Tauri 2 layout: a lib (so the same code can target desktop + mobile later) plus a thin bin.
[lib]
name = "compas_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"   # in-app auto-update against GitHub Releases (latest.json + signed payloads)
tauri-plugin-process = "2"   # relaunch() after an update installs
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

compas-core = { workspace = true }
compas-audio = { workspace = true }
compas-dsp = { workspace = true }
compas-sources = { workspace = true }
rtrb = { workspace = true }       # recording ring: master tap → WAV writer thread
midir = "0.10"                    # cross-platform MIDI input (controllers → synth)
rusqlite = { version = "0.32", features = ["bundled"] }  # library + per-track state (cues/loops/grid/history)
