[package]
name = "compas"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "compas — cross-platform real-time DJ application (Tauri 2 shell)."
default-run = "compas"

# Tauri 2 layout: a lib (so the same code can target desktop + mobile later) plus a thin bin.
[lib]
name = "compas_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[features]
default = []
# Enable real stem separation (links the native ONNX Runtime via compas-stems). Off by default so
# `cargo build`/CI stay pure; turn on for stem-enabled release builds: `cargo build --features stems`.
stems = ["compas-stems/onnx"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"   # in-app auto-update against GitHub Releases (latest.json + signed payloads)
tauri-plugin-process = "2"   # relaunch() after an update installs
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

compas-core = { workspace = true }
compas-audio = { workspace = true }
compas-dsp = { workspace = true }
compas-sources = { workspace = true }
compas-script = { workspace = true }   # sandboxed controller-scripting runtime (QuickJS)
# Offline stem separation. Pure by default (no native onnxruntime link); the `stems` feature
# below pulls in `compas-stems/onnx` so the default build + CI never need a local runtime.
compas-stems = { workspace = true }
rtrb = { workspace = true }       # recording ring: master tap → WAV writer thread
midir = "0.10"                    # cross-platform MIDI input (controllers → synth)
hidapi = "2"                      # raw HID input for non-class-compliant controllers (NI, etc.)
rusqlite = { version = "0.32", features = ["bundled"] }  # library + per-track state (cues/loops/grid/history)

[lints]
workspace = true
